force-app/main/default/objects/Account/fields/AcceptForContactRealEstatePhone__c.field-meta.xml
<CustomField>
    <fullName>AcceptForContactRealEstatePhone__c</fullName>
    <label>(削除)受付連絡用_不動産TEL</label>
    <type>Phone</type>
</CustomField>