force-app/main/default/objects/Account/fields/AccountAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>AccountAbbreviation__c</fullName>
    <label>取引先略称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>