force-app/main/default/objects/Account/fields/AccountGroupId__c.field-meta.xml
<CustomField>
    <fullName>AccountGroupId__c</fullName>
    <label>取引先グループID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>