force-app/main/default/objects/Account/fields/AdvanceChargesRate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceChargesRate__c</fullName>
    <label>立替手数料率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>