force-app/main/default/objects/Account/fields/AgencyDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>AgencyDiscountRate__c</fullName>
    <label>仲介割引率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>