force-app/main/default/objects/Account/fields/AnExternalFormStandardStandardMonth__c.field-meta.xml
<CustomField>
    <fullName>AnExternalFormStandardStandardMonth__c</fullName>
    <label>外形標準基準月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>