force-app/main/default/objects/Account/fields/AntisocialArticle__c.field-meta.xml
<CustomField>
    <fullName>AntisocialArticle__c</fullName>
    <label>反社条文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>