force-app/main/default/objects/Account/fields/AntisocialArticleAffirmationsTerms__c.field-meta.xml
<CustomField>
    <fullName>AntisocialArticleAffirmationsTerms__c</fullName>
    <label>反社条文_確約_条</label>
    <length>255</length>
    <type>Text</type>
</CustomField>