force-app/main/default/objects/Account/fields/AntisocialArticleCancel__c.field-meta.xml
<CustomField>
    <fullName>AntisocialArticleCancel__c</fullName>
    <label>反社条文_解約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>