force-app/main/default/objects/Account/fields/AntisocialExclusionCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>AntisocialExclusionCorrespondence__c</fullName>
    <label>反社排除対応</label>
    <type>TextArea</type>
</CustomField>