force-app/main/default/objects/Account/fields/ArrangeOperationMemoForDisplay__c.field-meta.xml
<CustomField>
    <fullName>ArrangeOperationMemoForDisplay__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>手配業務メモ_表示用</label>
    <type>Text</type>
</CustomField>