force-app/main/default/objects/Account/fields/ArticleNegotiationSheet__c.field-meta.xml
<CustomField>
    <fullName>ArticleNegotiationSheet__c</fullName>
    <label>条文交渉シート文言</label>
    <type>TextArea</type>
</CustomField>