force-app/main/default/objects/Account/fields/ATaxOfficeNum__c.field-meta.xml
<CustomField>
    <fullName>ATaxOfficeNum__c</fullName>
    <label>税務署番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>