force-app/main/default/objects/Account/fields/BasicRank__c.field-meta.xml
<CustomField>
    <fullName>BasicRank__c</fullName>
    <label>基本ランク</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>