force-app/main/default/objects/Account/fields/BuissinessContent__c.field-meta.xml
<CustomField>
    <fullName>BuissinessContent__c</fullName>
    <label>事業内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>