force-app/main/default/objects/Account/fields/CancelContractChangeTeam__c.field-meta.xml
<CustomField>
    <fullName>CancelContractChangeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約名変チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>取引先 (解約名変チーム)</relationshipLabel>
    <relationshipName>CancelContractChangeTeamSection</relationshipName>
    <type>Lookup</type>
</CustomField>