force-app/main/default/objects/Account/fields/ChangeTeam__c.field-meta.xml
<CustomField>
    <fullName>ChangeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Account_cSectionRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>