force-app/main/default/objects/Account/fields/ChargeTeam__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>AccountSectionRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>