force-app/main/default/objects/Account/fields/ChatterGroupId__c.field-meta.xml
<CustomField>
    <fullName>ChatterGroupId__c</fullName>
    <externalId>true</externalId>
    <label>ChatterグループID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>