force-app/main/default/objects/Account/fields/ChatterGroupName__c.field-meta.xml
<CustomField>
    <fullName>ChatterGroupName__c</fullName>
    <label>Chatterグループ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>