force-app/main/default/objects/Account/fields/CheckDigit3__c.field-meta.xml
<CustomField>
    <fullName>CheckDigit3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェックディジットチェック３</label>
    <type>Checkbox</type>
</CustomField>