force-app/main/default/objects/Account/fields/CheckDigit4__c.field-meta.xml
<CustomField>
    <fullName>CheckDigit4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェックディジットチェック４</label>
    <type>Checkbox</type>
</CustomField>