force-app/main/default/objects/Account/fields/CheckDigit5__c.field-meta.xml
<CustomField>
    <fullName>CheckDigit5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェックディジットチェック５</label>
    <type>Checkbox</type>
</CustomField>