force-app/main/default/objects/Account/fields/ConditionChangeTeam__c.field-meta.xml
<CustomField>
    <fullName>ConditionChangeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Account_cSectionRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>