force-app/main/default/objects/Account/fields/ConsignmentCollectionCancel__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentCollectionCancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>委託料徴収_解約</label>
    <type>Checkbox</type>
</CustomField>