force-app/main/default/objects/Account/fields/ConsignmentCollectionNew__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentCollectionNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>委託料徴収_新規</label>
    <type>Checkbox</type>
</CustomField>