force-app/main/default/objects/Account/fields/ConsignmentCollectionType__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentCollectionType__c</fullName>
    <label>委託料徴収区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>