force-app/main/default/objects/Account/fields/ConsignmentFixedCostSetting__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFixedCostSetting__c</fullName>
    <label>委託料固定額設定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>