force-app/main/default/objects/Account/fields/ConsignmentStandard__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentStandard__c</fullName>
    <label>委託料基準</label>
    <length>255</length>
    <type>Text</type>
</CustomField>