force-app/main/default/objects/Account/fields/ContactSuperior__c.field-meta.xml
<CustomField>
    <fullName>ContactSuperior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>上長</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>取引先 (上長)</relationshipLabel>
    <relationshipName>COZqLp</relationshipName>
    <type>Lookup</type>
</CustomField>