force-app/main/default/objects/Account/fields/ContactUnavailableOwner__c.field-meta.xml
<CustomField>
    <fullName>ContactUnavailableOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡不可家主</label>
    <type>Checkbox</type>
</CustomField>