force-app/main/default/objects/Account/fields/ContractMailOperatingCostsNote__c.field-meta.xml
<CustomField>
    <fullName>ContractMailOperatingCostsNote__c</fullName>
    <label>(削除)契約書郵送業務費備考</label>
    <type>TextArea</type>
</CustomField>