force-app/main/default/objects/Account/fields/ContractMoneyBillingDate__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBillingDate__c</fullName>
    <label>(削除)契約金請求日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>