force-app/main/default/objects/Account/fields/ContractMoneyDeadline__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyDeadline__c</fullName>
    <label>(削除)契約金締日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>