force-app/main/default/objects/Account/fields/ContractorCopied__c.field-meta.xml
<CustomField>
    <fullName>ContractorCopied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(削除)契約者転記済</label>
    <type>Checkbox</type>
</CustomField>