force-app/main/default/objects/Account/fields/ContractParticipatingStore__c.field-meta.xml
<CustomField>
    <fullName>ContractParticipatingStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>成約加盟店</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountAccountRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>