force-app/main/default/objects/Account/fields/ContractSignatureRepresentative__c.field-meta.xml
<CustomField>
    <fullName>ContractSignatureRepresentative__c</fullName>
    <label>(削除)契約書署名代表者</label>
    <type>TextArea</type>
</CustomField>