force-app/main/default/objects/Account/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <label>契約期間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>