force-app/main/default/objects/Account/fields/ContractTermEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractTermEndDate__c</fullName>
    <label>契約期間終期</label>
    <type>Date</type>
</CustomField>