force-app/main/default/objects/Account/fields/ContractTermStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractTermStartDate__c</fullName>
    <label>契約期間始期</label>
    <type>Date</type>
</CustomField>