force-app/main/default/objects/Account/fields/CorporationNum1__c.field-meta.xml
<CustomField>
    <fullName>CorporationNum1__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>法人番号貼り付け用１</label>
    <type>Text</type>
</CustomField>