force-app/main/default/objects/Account/fields/CorporationNum1D__c.field-meta.xml
<CustomField>
    <fullName>CorporationNum1D__c</fullName>
    <label>法人番号１Ｄ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>