force-app/main/default/objects/Account/fields/CorporationNum2__c.field-meta.xml
<CustomField>
    <fullName>CorporationNum2__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>法人番号貼り付け用２</label>
    <type>Text</type>
</CustomField>