force-app/main/default/objects/Account/fields/CorporationNum2A__c.field-meta.xml
<CustomField>
    <fullName>CorporationNum2A__c</fullName>
    <label>法人番号２Ａ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>