force-app/main/default/objects/Account/fields/CorporationNum4D__c.field-meta.xml
<CustomField>
    <fullName>CorporationNum4D__c</fullName>
    <label>法人番号４Ｄ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>