force-app/main/default/objects/Account/fields/CorporationNum5__c.field-meta.xml
<CustomField>
    <fullName>CorporationNum5__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>法人番号貼り付け用５</label>
    <type>Text</type>
</CustomField>