force-app/main/default/objects/Account/fields/CorporationNum5C__c.field-meta.xml
<CustomField>
    <fullName>CorporationNum5C__c</fullName>
    <label>法人番号５Ｃ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>