force-app/main/default/objects/Account/fields/CorporationNumCollectUnavailableDate__c.field-meta.xml
<CustomField>
    <fullName>CorporationNumCollectUnavailableDate__c</fullName>
    <label>法人番号回収不可日</label>
    <type>Date</type>
</CustomField>