force-app/main/default/objects/Account/fields/CorporationNumOutput__c.field-meta.xml
<CustomField>
    <fullName>CorporationNumOutput__c</fullName>
    <label>法人番号出力</label>
    <length>255</length>
    <type>Text</type>
</CustomField>