force-app/main/default/objects/Account/fields/DepositRefundDetailFormat__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundDetailFormat__c</fullName>
    <label>敷金返金明細書式</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>EXCEL</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>