force-app/main/default/objects/Account/fields/DiscountNetIs__c.field-meta.xml
<CustomField>
    <fullName>DiscountNetIs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>割引ネットフラグ</label>
    <type>Checkbox</type>
</CustomField>