force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>メールAD（テキスト型）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>