force-app/main/default/objects/Account/fields/EmployeeNoDigits__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNoDigits__c</fullName>
    <label>社員番号桁数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>