force-app/main/default/objects/Account/fields/Establishment__c.field-meta.xml
<CustomField>
    <fullName>Establishment__c</fullName>
    <label>設立</label>
    <length>255</length>
    <type>Text</type>
</CustomField>