force-app/main/default/objects/Account/fields/FCComment__c.field-meta.xml
<CustomField>
    <fullName>FCComment__c</fullName>
    <label>ＦＣコメント</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S_メール</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>