force-app/main/default/objects/Account/fields/FinanceNote__c.field-meta.xml
<CustomField>
    <fullName>FinanceNote__c</fullName>
    <label>経理備考</label>
    <type>TextArea</type>
</CustomField>