force-app/main/default/objects/Account/fields/FinanceRentCollectBankAccount__c.field-meta.xml
<CustomField>
    <fullName>FinanceRentCollectBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>経理家賃回収口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>AccountBankAccountRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>