force-app/main/default/objects/Account/fields/FinanceTeam__c.field-meta.xml
<CustomField>
    <fullName>FinanceTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>経理チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>取引先 (経理チーム)</relationshipLabel>
    <relationshipName>SIGs</relationshipName>
    <type>Lookup</type>
</CustomField>