force-app/main/default/objects/Account/fields/HeadQuarterBranchOfficeType__c.field-meta.xml
<CustomField>
    <fullName>HeadQuarterBranchOfficeType__c</fullName>
    <label>本社支店区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>本社</fullName>
            </value>
            <value>
                <fullName>支店</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>