force-app/main/default/objects/Account/fields/IndemnificationPlanTargetCompany__c.field-meta.xml
<CustomField>
    <fullName>IndemnificationPlanTargetCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>補償プラン対象企業</label>
    <type>Checkbox</type>
</CustomField>