force-app/main/default/objects/Account/fields/IsAbroadOwner__c.field-meta.xml
<CustomField>
    <fullName>IsAbroadOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>海外家主フラグ</label>
    <type>Checkbox</type>
</CustomField>