force-app/main/default/objects/Account/fields/IsContractPossible__c.field-meta.xml
<CustomField>
    <fullName>IsContractPossible__c</fullName>
    <label>契約不可マーク</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>