force-app/main/default/objects/Account/fields/IsCorporationNumUncollected__c.field-meta.xml
<CustomField>
    <fullName>IsCorporationNumUncollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>法人番号未回収フラグ</label>
    <type>Checkbox</type>
</CustomField>