force-app/main/default/objects/Account/fields/IsJointGuarantor__c.field-meta.xml
<CustomField>
    <fullName>IsJointGuarantor__c</fullName>
    <label>連帯保証人可否マーク</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>