force-app/main/default/objects/Account/fields/IsJointNameLandlordCorporationSelf__c.field-meta.xml
<CustomField>
    <fullName>IsJointNameLandlordCorporationSelf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連名親家主法人個人フラグ</label>
    <type>Checkbox</type>
</CustomField>