force-app/main/default/objects/Account/fields/IsNissay__c.field-meta.xml
<CustomField>
    <fullName>IsNissay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>日本生命社フラグ</label>
    <type>Checkbox</type>
</CustomField>