force-app/main/default/objects/Account/fields/IsParentShareContractor__c.field-meta.xml
<CustomField>
    <fullName>IsParentShareContractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>親共有名義フラグ</label>
    <type>Checkbox</type>
</CustomField>