force-app/main/default/objects/Account/fields/IsRemoteAccessEnable__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>在宅非表示フラグ</label>
    <type>Checkbox</type>
</CustomField>