force-app/main/default/objects/Account/fields/IsTokutokuService__c.field-meta.xml
<CustomField>
    <fullName>IsTokutokuService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>得々サービス有無</label>
    <type>Checkbox</type>
</CustomField>