force-app/main/default/objects/Account/fields/IsUseUruruEAS__c.field-meta.xml
<CustomField>
    <fullName>IsUseUruruEAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>うるるeas利用</label>
    <type>Checkbox</type>
</CustomField>