force-app/main/default/objects/Account/fields/LenderCancelNotice__c.field-meta.xml
<CustomField>
    <fullName>LenderCancelNotice__c</fullName>
    <label>貸主解約予告</label>
    <length>255</length>
    <type>Text</type>
</CustomField>