force-app/main/default/objects/Account/fields/LenderCancelNoticeTerms__c.field-meta.xml
<CustomField>
    <fullName>LenderCancelNoticeTerms__c</fullName>
    <label>貸主解約予告_条</label>
    <length>255</length>
    <type>Text</type>
</CustomField>