force-app/main/default/objects/Account/fields/LenderUnclear__c.field-meta.xml
<CustomField>
    <fullName>LenderUnclear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>貸主不明表示</label>
    <type>Checkbox</type>
</CustomField>