force-app/main/default/objects/Account/fields/MoveContractInsuranceCompanyName__c.field-meta.xml
<CustomField>
    <fullName>MoveContractInsuranceCompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入契保企業名</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountAccountRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>