force-app/main/default/objects/Account/fields/MovingTraderName__c.field-meta.xml
<CustomField>
    <fullName>MovingTraderName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(削除)引越業者名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先 (引越業者名)</relationshipLabel>
    <relationshipName>AccountAccountRelation8</relationshipName>
    <type>Lookup</type>
</CustomField>