force-app/main/default/objects/Account/fields/MyNumberCompanyGroupName__c.field-meta.xml
<CustomField>
    <fullName>MyNumberCompanyGroupName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MN企業グループ名</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountAccountRelation6</relationshipName>
    <type>Lookup</type>
</CustomField>