force-app/main/default/objects/Account/fields/NewMatterTeam__c.field-meta.xml
<CustomField>
    <fullName>NewMatterTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>斡旋/新規チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Account_cSectionRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>