force-app/main/default/objects/Account/fields/NonconformityLandlord__c.field-meta.xml
<CustomField>
    <fullName>NonconformityLandlord__c</fullName>
    <label>不適合家主</label>
    <type>TextArea</type>
</CustomField>