force-app/main/default/objects/Account/fields/NoteAdjustmentMatter2__c.field-meta.xml
<CustomField>
    <fullName>NoteAdjustmentMatter2__c</fullName>
    <label>注意調整事項2</label>
    <type>TextArea</type>
</CustomField>