force-app/main/default/objects/Account/fields/NoteAdjustmentMatter3__c.field-meta.xml
<CustomField>
    <fullName>NoteAdjustmentMatter3__c</fullName>
    <label>注意調整事項3</label>
    <type>TextArea</type>
</CustomField>