force-app/main/default/objects/Account/fields/NoteAdjustmentMatter4__c.field-meta.xml
<CustomField>
    <fullName>NoteAdjustmentMatter4__c</fullName>
    <label>注意調整事項4</label>
    <type>TextArea</type>
</CustomField>