force-app/main/default/objects/Account/fields/NotificationMethod__c.field-meta.xml
<CustomField>
    <fullName>NotificationMethod__c</fullName>
    <label>自動通知方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>郵送</fullName>
            </value>
            <value>
                <fullName>メール+FAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>