force-app/main/default/objects/Account/fields/NotificationTemplate__c.field-meta.xml
<CustomField>
    <fullName>NotificationTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>通知テンプレート</label>
    <referenceTo>NotificationTemplate__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>AccountNotificationTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>