force-app/main/default/objects/Account/fields/OfferStaff__c.field-meta.xml
<CustomField>
    <fullName>OfferStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>提供担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountUserRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>