force-app/main/default/objects/Account/fields/OtherShareMatter__c.field-meta.xml
<CustomField>
    <fullName>OtherShareMatter__c</fullName>
    <label>その他共有事項</label>
    <type>TextArea</type>
</CustomField>