force-app/main/default/objects/Account/fields/OwnerNote__c.field-meta.xml
<CustomField>
    <fullName>OwnerNote__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>親家主備考</label>
    <type>Text</type>
</CustomField>