force-app/main/default/objects/Account/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>会社形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>東証一部上場</fullName>
            </value>
            <value>
                <fullName>東証二部上場</fullName>
            </value>
            <value>
                <fullName>大証一部上場</fullName>
            </value>
            <value>
                <fullName>大証二部上場</fullName>
            </value>
            <value>
                <fullName>名証一部上場</fullName>
            </value>
            <value>
                <fullName>名証二部上場</fullName>
            </value>
            <value>
                <fullName>ジャスダック上場</fullName>
            </value>
            <value>
                <fullName>マザーズ上場</fullName>
            </value>
            <value>
                <fullName>非上場</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>