force-app/main/default/objects/Account/fields/ParticipatingStore__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>加盟店</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>