force-app/main/default/objects/Account/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <defaultValue>false</defaultValue>
    <label>パターンフラグ</label>
    <type>Checkbox</type>
</CustomField>