force-app/main/default/objects/Account/fields/PenaltyIsArticle_del__c.field-meta.xml
<CustomField>
    <fullName>PenaltyIsArticle_del__c</fullName>
    <label>違約金の有無_条</label>
    <length>255</length>
    <type>Text</type>
</CustomField>