force-app/main/default/objects/Account/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>電話2</label>
    <type>Phone</type>
</CustomField>