force-app/main/default/objects/Account/fields/Phone3__c.field-meta.xml
<CustomField>
    <fullName>Phone3__c</fullName>
    <label>電話3</label>
    <type>Phone</type>
</CustomField>