force-app/main/default/objects/Account/fields/Phone4__c.field-meta.xml
<CustomField>
    <fullName>Phone4__c</fullName>
    <label>電話4</label>
    <type>Phone</type>
</CustomField>