force-app/main/default/objects/Account/fields/PracticeChargeEmail1__c.field-meta.xml
<CustomField>
    <fullName>PracticeChargeEmail1__c</fullName>
    <label>実務担当メール１</label>
    <type>Email</type>
</CustomField>