force-app/main/default/objects/Account/fields/PracticeChargeEmail2__c.field-meta.xml
<CustomField>
    <fullName>PracticeChargeEmail2__c</fullName>
    <label>実務担当メール２</label>
    <type>Email</type>
</CustomField>