force-app/main/default/objects/Account/fields/PrecautionsHistory__c.field-meta.xml
<CustomField>
    <fullName>PrecautionsHistory__c</fullName>
    <label>要注意履歴</label>
    <length>255</length>
    <type>Text</type>
</CustomField>