force-app/main/default/objects/Account/fields/PriorityMediationContactMethod__c.field-meta.xml
<CustomField>
    <fullName>PriorityMediationContactMethod__c</fullName>
    <label>優先斡旋依頼書連絡方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>メール</fullName>
                <default>true</default>
                <label>メール</label>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>メール+Chatter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>