force-app/main/default/objects/Account/fields/PriorityRankingChangeEndDate__c.field-meta.xml
<CustomField>
    <fullName>PriorityRankingChangeEndDate__c</fullName>
    <label>優先順位変更終了日</label>
    <type>Date</type>
</CustomField>