force-app/main/default/objects/Account/fields/QuestionnaireUnnecessary__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireUnnecessary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>アンケート不要</label>
    <type>Checkbox</type>
</CustomField>