force-app/main/default/objects/Account/fields/RefundBankGuideMethod__c.field-meta.xml
<CustomField>
    <fullName>RefundBankGuideMethod__c</fullName>
    <label>自動返金口座案内方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自動</fullName>
                <default>true</default>
                <label>自動</label>
            </value>
            <value>
                <fullName>手動</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>