force-app/main/default/objects/Account/fields/RegularHoliday__c.field-meta.xml
<CustomField>
    <fullName>RegularHoliday__c</fullName>
    <label>定休日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>