force-app/main/default/objects/Account/fields/RenewalContactFAX__c.field-meta.xml
<CustomField>
    <fullName>RenewalContactFAX__c</fullName>
    <label>更新窓口FAX</label>
    <type>Phone</type>
</CustomField>