force-app/main/default/objects/Account/fields/RenewalTeam__c.field-meta.xml
<CustomField>
    <fullName>RenewalTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Account_cSectionRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>