force-app/main/default/objects/Account/fields/RenewalTermsArticle__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsArticle__c</fullName>
    <label>更新条件_条</label>
    <length>255</length>
    <type>Text</type>
</CustomField>